# epub-search

./: .gitignore  Dockerfile  README.md  app.py  epub_parser.py  pyproject.toml  start.sh
.github/workflows/: release.yml
static/: index.html
