[project]
name = "ebbok-search"
version = "0.1.0"
description = "FastAPI application for serving EPUB content with AI search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
